--- a/index.html
+++ b/index.html
@@ -77,26 +77,27 @@
 <!-- ---------services---------- -->
 <div id="services">
     <div class="container">
-        <h1 class="sub-title">My Services</h1>
+        <h1 class="sub-title">My Certificates</h1>
         <div class="services-list">
             <div>
-                <i class="fa-solid fa-code"></i>
-                <h2>Web Design</h2>
-                <p>As a frontend developer, my skills include crafting responsive websites, custom frontend solutions, framework integration, cross-browser compatibility, performance optimization, and ongoing maintenance and support.
+                <!-- <i class="fa-solid fa-code"></i> -->
+                <h2>Career Essentials in Data Analysis by Microsoft and LinkedIn</h2>
+                <p>Career Essentials in Data Analysis by Microsoft and LinkedIn equips learners with fundamental skills and knowledge essential for success in the dynamic field of data analysis.
                 </p>
-                <a href="#">Learn more</a>
+                <a href="https://www.linkedin.com/learning/certificates/1b26d984e8c0f001c5fda04e17acee457893c61eb875370d10438dbb1f73ed96"><i class="fa-solid fa-up-right-from-square"></i></i></i></a>
             </div>
             <div>
-                <i class="fa-solid fa-crop"></i>
-                <h2>UI/UX</h2>
-                <p>As a UI/UX specialist, my skills include designing intuitive user interfaces, creating engaging user experiences, conducting user research, prototyping, wireframing, usability testing, and implementing design systems.</p>
-                <a href="#">Learn more</a>
+                <!-- <i class="fa-solid fa-crop"></i> -->
+                <h2>Problem Solving (Intermediate) Certificate</h2>
+                <p>The Problem Solving (Intermediate) Certificate in the context of Data Structures and Algorithms (DSA) validates proficiency in solving complex problems using efficient algorithms and data structures.
+                </p>
+                <a href="https://www.hackerrank.com/certificates/3ec64d558dc4"><i class="fa-solid fa-up-right-from-square"></i></i></i></a>
             </div>
             <div>
-                <i class="fa-brands fa-uncharted"></i>
-                <h2>Software Engineer</h2>
-                <p>As a Software Engineer, my skills include developing responsive websites, creating custom frontend solutions, integrating frameworks, ensuring cross-browser compatibility, optimizing performance, and providing ongoing maintenance and support.</p>
-                <a href="#">Learn more</a>
+                <!-- <i class="fa-brands fa-uncharted"></i> -->
+                <h2>Machine Learning for All By University Of London</h2>
+                <p>Machine Learning for All certificate: Equips learners with essential skills and knowledge in machine learning, making the field accessible to all levels of expertise.</p>
+                <a href="https://coursera.org/share/4497f79029dd78075b78c48c68e1c1e9"><i class="fa-solid fa-up-right-from-square"></i></i></i></a>
             </div>
 
         </div>
