--- a/index.html
+++ b/index.html
@@ -206,22 +206,15 @@
 </script>
 
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwx_IDJcPv70eQ8JIXJy2Hnn1hZYFjT9ns8Ger1N2m1fEYSVklHrr7D_BVqjZd3LJO/exec'
-    const form = document.forms['submit-to-google-sheet']
-    const msg = document.getElementById("msg")
-  
-    form.addEventListener('submit', e => {
-      e.preventDefault()
-      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-        .then(response => {
-            msg.innerHTML = "Message sent successfully"
-            setTimeout(function(){
-                msg.innerHTML= ""
-            },5000)
-            form.reset
-        })
-        .catch(error => console.error('Error!', error.message))
-    })
-  </script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbzbH-uolvTcZ_rGbIOY9JA5VjtrRkfJdP_Ssdh_uKDMA6e_U363Pxj6NGU4meO9OuAe/exec'
+  const form = document.forms['submit-to-google-sheet']
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => console.log('Success!', response))
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
 </body>
 </html>
