--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <nav>
             <img src="images/Logo.png" alt="logo" class="logo">
             <ul id="sidemenu">
-                <li><a href="#header">Home</a></li>
+                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Service</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#services">My Certificates</a></li>
+                <li><a href="#portfolio">My Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
             </ul>
@@ -40,9 +40,8 @@
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
                 <p>
-                    <b>Welcome to my portfolio!</b>Proficient in Java, JavaScript, and C++, <br>I possess a robust skill set in programming and software development.<br> With a foundation in algorithms and basic Operating Systems,<br> coupled with coursework in data structures and web development,<br> I am equipped to tackle diverse challenges. Passionate about technology and a team player,<br> I am eager to contribute to innovative solutions and real-world projects in software development.
+                    <b><span>Welcome to my portfolio!</span></b>Proficient in Java, JavaScript, and C++ <br>I possess a robust skill set in programming and software development.<br> With a foundation in algorithms and basic Operating Systems, coupled <br>with coursework in data structures and web development,Machine Learning.<br> I am equipped to tackle diverse challenges. Passionate about technology and a team player,<br> I am eager to contribute to innovative solutions and real-world projects in software development.
                 </p>
-
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                     <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -120,7 +119,7 @@
             </div>
         </div>
         <div class="work">
-            <img src="images/Sentiment-Analysis-hero.jpg">
+            <img src="images/sentimental.png">
             <div class="layer">
                 <h3>Sentimental-analysis</h3>
                 <p>Conducted sentiment analysis on over 10,000 customer reviews and social media mentions for Nyka’s top cosmetic brands, achieving an 85% accuracy rate, leading to a 15% increase in customer satisfaction ratings by providing actionable insights through Decision Tree and Random Forest Algorithm methodologies.</p>
@@ -157,7 +156,7 @@
                     <a href="https://www.linkedin.com/in/kaushik-anand1724/"><i class="fa-brands fa-linkedin"></i></a>
 
                 </div>
-                <a href="images/Kaushik_resume .pdf" download class="btn btn2">Download CV</a>
+                <a href="images/Kaushik_resume.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
