--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p>SOFTWARE <span>DEVLOPER</span></p>
+            <p>SOFTWARE <span>DEVELOPER</span></p>
             <h1>Hi, I'm <span>Kaushik</span><br> Anand from Pune</h1>
         </div>
       </div>  
